removed br and added contact form

--- a/survey.html
+++ b/survey.html
@@ -28,7 +28,7 @@
                 <option value="a">Nepal</option>
                 <option value="b">India</option>
                 <option value="c">China</option>
-            </select><br><br>
+            </select><br>
 
             <label id="contact">Contact</label><br>
             <input type="number" id="phone" placeholder="Phone" required/>
